--- a/config/settings.json
+++ b/config/settings.json
@@ -6,7 +6,8 @@
       "protocol":"mqtt",
       "host":"",
       "username":"",
-      "password":""
+      "password":"",
+      "client_id":""
     },
     "c53d4c74-5872-4095-9cb5-5dcbae403216":{
       "name":"nova conexão",
@@ -14,7 +15,8 @@
       "protocol":"mqtt",
       "host":"",
       "username":"",
-      "password":""
+      "password":"",
+      "client_id":""
     },
     "d35e9442-dfae-4485-9f9e-18dcd20d5279":{
       "name":"nova conexão",
@@ -22,7 +24,8 @@
       "protocol":"mqtt",
       "host":"",
       "username":"",
-      "password":""
+      "password":"",
+      "client_id":""
     }
   }
 }
