--- a/config/settings.json
+++ b/config/settings.json
@@ -7,7 +7,21 @@
       "host":"",
       "username":"",
       "password":"",
-      "client_id":""
+      "client_id":"",
+      "subscriptions":[
+        {
+          "topic":"",
+          "qos":"0"
+        },
+        {
+          "topic":"",
+          "qos":"0"
+        },
+        {
+          "topic":"",
+          "qos":"0"
+        }
+      ]
     }
   }
 }
