saving/load switch states (certificate validation and encryption tls) from JSON file

--- a/config/settings.json
+++ b/config/settings.json
@@ -8,6 +8,8 @@
       "username":"",
       "password":"",
       "client_id":"",
+      "certValidation":true,
+      "encryption":true,
       "subscriptions":[
         {
           "topic":"",
