--- a/config/settings.json
+++ b/config/settings.json
@@ -4,11 +4,11 @@
       "name":"nova conexão",
       "port":1883,
       "protocol":"mqtt",
-      "host":"",
+      "host":"192.168.1.1",
       "username":"",
       "password":"",
       "client_id":"",
-      "certValidation":false,
+      "certValidation":true,
       "encryption":false,
       "subscriptions":[]
     }
