add stack page for certificates (CA, client cert and client key)

--- a/config/settings.json
+++ b/config/settings.json
@@ -8,7 +8,7 @@
       "username":"",
       "password":"",
       "client_id":"",
-      "certValidation":true,
+      "certValidation":false,
       "encryption":false,
       "subscriptions":[]
     }
