feat: Implement connect and disconnect buttons for MQTT connection

--- a/config/settings.json
+++ b/config/settings.json
@@ -10,7 +10,12 @@
       "client_id":"",
       "certValidation":false,
       "encryption":false,
-      "subscriptions":[],
+      "subscriptions":[
+        {
+          "topic":"#",
+          "qos":"0"
+        }
+      ],
       "serverCertificate":{
         "data":""
       },
